# devin

./: .gitignore  next.config.js  package-lock.json  package.json
backend/persona-generator/: image-response.json  pyproject.toml  test-response.json
backend/persona-generator/app/: main.py
persona-repository/: package-lock.json  package.json
persona-repository/src/app/: page.tsx
persona-repository/src/app/api/generate-persona/: route.ts
persona-repository/src/components/: CreatePersonaModal.tsx  PersonaCard.tsx  ViewPersonaModal.tsx
persona-repository/src/types/: persona.ts
project-management-app/: package-lock.json  package.json
project-management-app/src/: App.tsx
project-management-app/src/components/: ProjectDetails.tsx
src/app/: metadata.ts  page.tsx  providers.tsx
src/app/api/generate-persona/: route.ts
